syntax = "proto3";

package movie_ticket_booking_api.v1.movie;

option csharp_namespace = "MovieTicketBookingApi.Protos.V1.Movies";

import "Protos/google/api/annotations.proto";
import "Protos/v1/movie_session.proto";
import "Protos/Shared/empty.proto";
import "Protos/Shared/paging.proto";

service Movies {
	rpc GetAll (shared.paging.GetPaginatedDataRequest) returns (GetAllMoviesReply) {
		option (google.api.http) = {
			get: "/v1/movies"
		};
	}

	rpc GetById (GetMovieByIdRequest) returns (GetMovieByIdReply) {
		option (google.api.http) = {
			get: "/v1/movies/{id}"
		};
	}

	rpc Create (CreateMovieRequest) returns (CreateMovieReply) {
		option (google.api.http) = {
			post: "/v1/movies",
			body: "*"
		};
	}

	rpc Update (UpdateMovieRequest) returns (shared.empty.EmptyReply) {
		option (google.api.http) = {
			put: "/v1/movies/{id}",
			body: "*"
		};
	}

	rpc Delete (DeleteMovieRequest) returns (shared.empty.EmptyReply) {
		option (google.api.http) = {
			delete: "/v1/movies/{id}"
		};
	}
}

enum AgeRating {
	G = 0;
	PG = 1;
	PG13 = 2;
	R = 3;
	NC17 = 4;
	NR = 5;
}

message GetAllMoviesReply {
	repeated Movie movies = 1;
}

message GetMovieByIdRequest {
	string id = 1;
}

message GetMovieByIdReply {
	string id = 1;
	string title = 2;
	int32 duration_in_minutes = 3;
	AgeRating age_rating = 4;
	repeated movie_session.MovieSession movie_sessions = 5;
}

message CreateMovieRequest {
	string title = 1;
	int32 duration_in_minutes = 2;
	AgeRating age_rating = 3;
}

message CreateMovieReply {
	string id = 1;
	string title = 2;
	int32 duration_in_minutes = 3;
	AgeRating age_rating = 4;
}

message UpdateMovieRequest {
	string id = 1;
	string title = 2;
	int32 duration_in_minutes = 3;
	AgeRating age_rating = 4;
}

message DeleteMovieRequest {
	string id = 1;
}

message Movie {
	string id = 1;
	string title = 2;
	int32 duration_in_minutes = 3;
	AgeRating age_rating = 4;
	repeated movie_session.MovieSession movie_sessions = 5;
}